force-app/main/default/objects/Hill_Rom_Opportunity__c/Hill_Rom_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Deals that exist in Hill-Rom Salesforce.</description>
    <label>Hill-Rom Opportunity</label>
    <nameField>
        <label>Hill-Rom Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hill-Rom Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>