force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Close Date of the given Hill-Rom Opportunity.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>