force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Hill_Rom_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Hill_Rom_Opportunity_Id__c</fullName>
    <description>The Id of the Hill-Rom Opportunity</description>
    <externalId>true</externalId>
    <label>Hill-Rom Opportunity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>