force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_Email__c</fullName>
    <description>Owner&apos;s Email for the given Hill-Rom Opportunity</description>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>