force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Owner&apos;s Name for a given Hill-Rom Opportunity</description>
    <label>Owner Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>