force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone__c</fullName>
    <description>Owner&apos;s Phone for the given Hill-Rom Opportunity.</description>
    <label>Owner Phone</label>
    <type>Phone</type>
</CustomField>