force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Owner_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Title__c</fullName>
    <description>Owner&apos;s Title for the given Hill-Rom Opportunity</description>
    <label>Owner Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>