force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hill-Rom Opportunities</relationshipLabel>
    <relationshipName>Hill_Rom_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>