force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>StageName for the given Hill-Rom Opportunity</description>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>