force-app/main/default/objects/Hill_Rom_Opportunity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Opportunity Record Type for the given Hill-Rom Opportunity</description>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>